--- a/RACdotcom/Web.config
+++ b/RACdotcom/Web.config
@@ -4,6 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -13,6 +14,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <pages>
+      <namespaces>
+
+      </namespaces>
+    </pages>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
