need to fix error handling

--- a/RACdotcom/Views/web.config
+++ b/RACdotcom/Views/web.config
@@ -27,6 +27,12 @@
   </appSettings>
 
   <system.webServer>
+
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="/error.html" responseMode="ExecuteURL"/>
+    </httpErrors>
+
     <handlers>
       <remove name="BlockViewHandler" />
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
@@ -34,6 +40,16 @@
   </system.webServer>
 
   <system.web>
+    
+    <!-- custom error handling (this way doesn't seem to work well, ask about it) -->
+    
+    <customErrors mode="On">
+      <error statusCode="404" redirect="~/error.html"/>
+      <!--<error statusCode="403" redirect="~/ErrorPages/error.html"/>
+      <error statusCode="400" redirect="~/ErrorPages/error.html"/>
+      <error statusCode="500" redirect="~/ErrorPages/error.html"/>-->
+    </customErrors>
+    
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
