--- a/RACdotcom/Views/web.config
+++ b/RACdotcom/Views/web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
-        <add namespace="RACdotcom" />        
+        <add namespace="RACdotcom" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -27,29 +27,29 @@
   </appSettings>
 
   <system.webServer>
-
-    <httpErrors errorMode="Custom">
-      <remove statusCode="404"/>
-      <error statusCode="404" path="/error.html" responseMode="ExecuteURL"/>
-    </httpErrors>
-
-    <handlers>
+    <!--<handlers>
       <remove name="BlockViewHandler" />
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
-    </handlers>
+    </handlers>-->
+   <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error
+        statusCode="404"
+        path="~/error.html"
+        responseMode="File"/>
+    </httpErrors>  
   </system.webServer>
 
   <system.web>
-    
-    <!-- custom error handling (this way doesn't seem to work well, ask about it) -->
-    
-    <customErrors mode="On">
-      <error statusCode="404" redirect="~/error.html"/>
-      <!--<error statusCode="403" redirect="~/ErrorPages/error.html"/>
-      <error statusCode="400" redirect="~/ErrorPages/error.html"/>
-      <error statusCode="500" redirect="~/ErrorPages/error.html"/>-->
+
+    <!-- still not working and i do not know why.. -->
+    <customErrors defaultRedirect="~/Error/error.html"
+                mode="On">
+      <error statusCode="404" redirect="~/Error/error.html"/>
+      <error statusCode="403" redirect="~/Error/error.html"/>
+      <error statusCode="400" redirect="~/Error/error.html"/>
     </customErrors>
-    
+
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
