cleanup and README

--- a/RACdotcom/Views/web.config
+++ b/RACdotcom/Views/web.config
@@ -27,27 +27,26 @@
   </appSettings>
 
   <system.webServer>
-    <!--<handlers>
+    
+    <handlers>
       <remove name="BlockViewHandler" />
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
-    </handlers>-->
+    </handlers>
+    
+    <!-- which of these is correct? -->
    <httpErrors errorMode="Custom" existingResponse="Replace">
       <clear/>
-      <error
-        statusCode="404"
-        path="~/error.html"
-        responseMode="File"/>
+      <error statusCode="404" path="~/error.html" responseMode="File"/>
     </httpErrors>  
   </system.webServer>
 
   <system.web>
-
-    <!-- still not working and i do not know why.. -->
-    <customErrors defaultRedirect="~/Error/error.html"
-                mode="On">
-      <error statusCode="404" redirect="~/Error/error.html"/>
-      <error statusCode="403" redirect="~/Error/error.html"/>
-      <error statusCode="400" redirect="~/Error/error.html"/>
+    <!-- not sure about this -->
+    <!-- i think this mode parameter needs to be changed when deployed -->
+    <customErrors defaultRedirect="~/error.html" mode="On">
+      <error statusCode="404" redirect="~/error.html"/>
+      <error statusCode="403" redirect="~/error.html"/>
+      <error statusCode="400" redirect="~/error.html"/>
     </customErrors>
 
     <compilation>
