--- a/RACdotcom/bin/RACdotcom.dll.config
+++ b/RACdotcom/bin/RACdotcom.dll.config
@@ -4,7 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -12,11 +11,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!-- i think this mode parameter needs to be changed when deployed -->
+    <customErrors defaultRedirect="~/error.html" mode="On">
+      <error statusCode="404" redirect="~/error.html"/>
+      <error statusCode="403" redirect="~/error.html"/>
+      <error statusCode="400" redirect="~/error.html"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
-
       </namespaces>
     </pages>    
   </system.web>
