--- a/RACdotcom/RACdotcom.csproj
+++ b/RACdotcom/RACdotcom.csproj
@@ -110,6 +110,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\my-pixel-art.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Images\ry3working.jpg" />
     <Content Include="error.html" />
