bckgrnd change / visited link color

--- a/RACdotcom/RACdotcom.csproj
+++ b/RACdotcom/RACdotcom.csproj
@@ -114,6 +114,7 @@
     <Content Include="Content\custom.css" />
     <Content Include="Images\necalli.jpg" />
     <Content Include="Images\nightwave_hokusai.jpg" />
+    <Content Include="Images\northern-lights-6.jpg" />
     <Content Include="Images\rightsidewave.jpg" />
     <Content Include="Images\ry3working.jpg" />
     <Content Include="error.html" />
